# NBER-CLI

./: .gitignore  .mcp.json  CHANGELOG.md  DESIGN.md  DESKTOP_UX.md  README.md  README.zh-CN.md  alembic.ini  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: code-to-docs.md  sync-docs-for-i18n.md
.codex/: config.toml
.github/workflows/: desktop.yml  docs.yml  lint.yml  publish.yml  pytest.yml
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/prototypes/: modern-desktop.html
desktop/src/: App.css  App.tsx  autoRefresh.test.ts  autoRefresh.ts  citation.test.ts  citation.ts  index.css  keyboardShortcuts.test.tsx  keyboardShortcuts.ts  nativeMenu.test.tsx  nativeMenu.ts  updateCheck.test.ts  updateCheck.ts  workspaceLayout.test.ts  workspaceLayout.ts
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  config.rs  database.rs  lib.rs  models.rs  network.rs  worker.rs
desktop/src/api/: client.ts  feed.ts  health.ts  native.test.ts  papers.ts  settings.ts
desktop/src/components/: FeedItemRow.test.tsx  FeedItemRow.tsx  FeedList.test.tsx  FeedList.tsx  Icons.tsx  PaperDetail.test.tsx  PaperDetail.tsx  RefreshButton.tsx  Sidebar.tsx  TagEditor.test.tsx  TagEditor.tsx
desktop/src/pages/: FeedPage.test.ts  FeedPage.test.tsx  FeedPage.tsx  SettingsPage.tsx
desktop/src/stores/: appStore.ts
desktop/src/types/: index.ts
docs/: cli-v2.md
docs/en/: architecture.md  changelog.md  cli.md  configuration.md  contributing.md  desktop.md  development.md  getting-started.md  glossary.md  http-api.md  index.md  mcp.md  persistence.md  policy.md  python-api.md  software-specification.md  testing.md  user-manual.md
docs/en/agents/: claude-code.md  codex.md  index.md  openclaw.md  others.md
docs/plans/: 2026-07-13-desktop-modern-ui.md  2026-07-13-macos-keyboard-shortcuts-design.md  2026-07-18-desktop-prefetch-info-design.md  2026-07-19-desktop-paper-tags-design.md  2026-07-19-desktop-paper-tags.md
docs/zh/: architecture.md  changelog.md  cli.md  configuration.md  contributing.md  desktop.md  development.md  getting-started.md  glossary.md  http-api.md  index.md  mcp.md  persistence.md  policy.md  python-api.md  software-specification.md  testing.md  user-manual.md
docs/zh/agents/: claude-code.md  codex.md  index.md  openclaw.md  others.md
plugins/nber-cli/: .mcp.json
plugins/nber-cli/.claude-plugin/: plugin.json
plugins/nber-cli/.codex-plugin/: plugin.json
plugins/nber-cli/skills/NBER-CLI/: SKILL.md
plugins/nber-cli/skills/NBER-CLI/examples/: use-of-automation.md  use-of-db.md  use-of-download.md  use-of-error-handling.md  use-of-feed.md  use-of-info.md  use-of-json-pipeline.md  use-of-mcp-server.md  use-of-search.md
release/: v0-9-2.md
scripts/: build-desktop-worker.py  build-sidecar.py  check-desktop-release.py  generate-desktop-icons.py  nber_desktop_worker_entry.py  nber_sidecar_entry.py  normalize-desktop-artifacts.py  prepare-tauri-signing.py  smoke-desktop-app.py  validate-desktop-signing.py
src/nber_cli/: __init__.py  __main__.py  cli.py  config.py  config.schema.json  config_store.py  db.py  desktop_worker.py  download.py  feed.py  fetcher.py  formatters.py  info_cache.py  logging_config.py  mcp.py
src/nber_cli/config/: __init__.py  config.py  config.schema.json  config_store.py
src/nber_cli/core/: __init__.py  models.py
src/nber_cli/core/download/: downloader.py
src/nber_cli/db/: __init__.py  db.py  info_cache.py
src/nber_cli/db/migrations/versions/: 20260708_0001_add_read_status.py
src/nber_cli/fetch/: __init__.py  download.py  feed.py  fetcher.py
src/nber_cli/mcp/: __init__.py  mcp.py
src/nber_cli/migrations/: env.py
src/nber_cli/server/: errors.py  main.py  migrations.py
src/nber_cli/server/routers/: feed.py  health.py  papers.py  settings.py
src/nber_cli/utils/: __init__.py  formatters.py  logging_config.py
src/nber_cli/webui/: __init__.py
src/nber_server/: __init__.py  errors.py  main.py  migrations.py  schemas.py
src/nber_server/routers/: __init__.py  feed.py  health.py  papers.py  settings.py
tests/: __init__.py  conftest.py  test_cli.py  test_config_store.py  test_db.py  test_desktop_artifact_normalization.py  test_desktop_release_scripts.py  test_desktop_signing_scripts.py  test_desktop_smoke_script.py  test_downloader.py  test_feed.py  test_fetcher.py  test_info_cache.py  test_info_cache_flow.py  test_logging.py  test_logs.py  test_main.py  test_mcp.py  test_release_metadata.py  test_server.py
tests/cli/: test_cli.py  test_main.py
tests/config/: test_config_store.py
tests/db/: test_db.py  test_info_cache.py  test_info_cache_flow.py
tests/desktop/: test_desktop_artifact_normalization.py  test_desktop_release_scripts.py  test_desktop_signing_scripts.py  test_desktop_smoke_script.py  test_desktop_worker.py
tests/fetch/: test_downloader.py  test_feed.py  test_fetcher.py
tests/mcp/: test_mcp.py
tests/release/: test_release_metadata.py
tests/server/: test_server.py
tests/utils/: test_logging.py  test_logs.py
