[project]
name = "nber-cli"
version = "0.7.0"
description = "A command-line interface for accessing National Bureau of Economic Research (NBER) papers without a browser."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Song Tan", email = "sepinetam@gmail.com" },
]
license = "Apache-2.0"
keywords = [
    "nber",
    "working-papers",
    "cli",
    "mcp",
    "research",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    "aiohttp",
    "fake_useragent",
    "aiohttp-retry",
    "certifi",
    "mcp>=1.27.1",
    "defusedxml>=0.7.1",
    "sqlmodel>=0.0.24",
    "packaging>=26.2",
]

[project.scripts]
nber-cli = "nber_cli:main"

[project.urls]
Homepage = "https://github.com/sepinetam/nber-cli"
Repository = "https://github.com/sepinetam/nber-cli"
Issues = "https://github.com/sepinetam/nber-cli/issues"
Documentation = "https://sepinetam.github.io/nber-cli/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.12.12",
    "mypy>=1.15.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.20",
    "mkdocs-static-i18n>=1.3.1",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/"]
