[package]
name = "app"
version = "0.7.0"
description = "Desktop app for NBER-CLI working paper feeds."
authors = ["Song Tan <sepinetam@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/sepinetam/nber-cli"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
