[package]
name = "app"
version = "0.9.0"
description = "Desktop app for NBER-CLI working paper feeds."
authors = ["Song Tan <sepinetam@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/sepinetam/nber-cli"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
html-escape = "0.2"
quick-xml = { version = "0.37", features = ["serialize"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
